chore: match_glob minver
see https://github.com/googleapis/python-storage/commit/d02098e6d5f656f9802cf0a494b507d77b065be7

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -34,7 +34,7 @@ requirements:
   run:
     - appdirs
     - crc32c
-    - google-cloud-storage
+    - google-cloud-storage >=2.10.0
     - {{ pin_compatible('numpy') }}
     - typing-extensions
     - importlib-metadata
