--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "4.3.0" %}
+{% set version = "5.0.0" %}
 
 package:
   name: genomekit
@@ -6,7 +6,7 @@ package:
 
 source:
   url: https://github.com/deepgenomics/GenomeKit/archive/refs/tags/v{{ version }}.tar.gz
-  sha256: 9264ae39316cc087a402e705ca0962e100f674a647ec15788ee25eb907cafe36
+  sha256: 98919884ec1cf8d0989c3395b46dbec8d64b8a3b3651bfaa7020192f0e677aee
 
 build:
   number: 0
@@ -16,6 +16,9 @@ build:
 requirements:
   build:
     - {{ compiler('cxx') }}
+    - python                                 # [build_platform != target_platform]
+    - cross-python_{{ target_platform }}     # [build_platform != target_platform]
+    - numpy                                  # [build_platform != target_platform]
 
   host:
     - appdirs
