fix: missing setuptools in build

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,6 +20,7 @@ requirements:
     - python                                 # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
     - numpy                                  # [build_platform != target_platform]
+    - setuptools                             # [build_platform != target_platform]
 
   host:
     - appdirs
@@ -31,6 +32,7 @@ requirements:
     - zlib
     - python {{ python }}
     - pip
+    - setuptools
 
   run:
     - appdirs
