--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,9 +25,8 @@ requirements:
   host:
     - appdirs
     - fmt
-    - numpy  # [not win or py>38]
-     # avoid build failure on Windows
-    - numpy >=1.18.0,<1.19.0  # [win and py==38]
+    - numpy >=1.22.0,<1.23.0  # [py>=39 and py<311]
+    - numpy >=1.26.0,<1.27.0  # [py>=311 and py<313]
     - typing-extensions
     - zlib
     - python {{ python }}
