--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,8 +25,7 @@ requirements:
   host:
     - appdirs
     - fmt
-    - numpy >=1.22.0,<1.23.0  # [py>=39 and py<311]
-    - numpy >=1.26.0,<1.27.0  # [py>=311 and py<313]
+    - numpy =2
     - typing-extensions
     - zlib
     - python {{ python }}
