--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,7 +25,7 @@ requirements:
   host:
     - appdirs
     - fmt
-    - numpy =2
+    - numpy <2.0dev0
     - typing-extensions
     - zlib
     - python {{ python }}
