--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -5,8 +5,8 @@ package:
   version: {{ version }}
 
 source:
-  url: https://github.com/deepgenomics/GenomeKit/archive/refs/tags/v{{ version }}.tar.gz
-  sha256: 52388be3d9835d53ee06b30943ee96e34d90a1179f3c9122d7b231de54a69f45
+  git_url: https://github.com/deepgenomics/GenomeKit.git
+  git_rev: chore/fmt11
 
 build:
   number: 1
