--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,4 +1,6 @@
 channel_targets:
 - conda-forge genomekit_dev
-cxx_compiler:
-- vs2020 # [win]
+c_compiler:    # [win]
+- vs2022       # [win]
+cxx_compiler:  # [win]
+- vs2022       # [win]
