--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -33,7 +33,7 @@ requirements:
 
   run:
     - appdirs
-    - google-cloud-storage >=2.10.0
+    - google-cloud-storage
     - boto3
     - typing-extensions
     - importlib-metadata
