--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "7.1.0" %}
+{% set version = "v7.1.0-py13-experimental" %}
 
 package:
   name: genomekit
@@ -6,12 +6,12 @@ package:
 
 source:
   url: https://github.com/deepgenomics/GenomeKit/archive/refs/tags/v{{ version }}.tar.gz
-  sha256: a124ef26234b42da3db8f83d676949b54995b0d2965e4eed22ede3ad8c73506a
+  sha256: f18f6b8b0fe48b6e3e06be0a5b243d6c2d6f1f746c8fd1f5c76c27b467105c8c
 
 build:
   number: 0
   script: {{ PYTHON }} -m pip install --no-deps --ignore-installed .
-  skip: true  # [py>312 or py<39]
+  skip: true  # [py>313 or py<313]
 
 requirements:
   build:
